[package]
name = "nodeforge"
description = "NodeForge is a simple application to create maelstrom nodes."
authors = ["Rodrigo Bronzelle <bronzelle@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
